--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -225,7 +225,7 @@ $breadcrumbs = $this->breadcrumb(
                     </div>
                 </div>
             </div>
-            <div class="pi-header-body-category clearfix">
+            <div class="pi-header-body-category clearfix hidden-xs">
                 <div class="thumbnail">
                     <a href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism" title="طبیعت گردی">
                         <img class="img-responsive" src="<?php echo $this->assetTheme('image/ecotourism.jpg'); ?>" alt="طبیعت گردی">
