--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -208,17 +208,16 @@ $breadcrumbs = $this->breadcrumb(
                     <div class="row">
                         <div class="col-md-8">
                             <div class="pi-header-information">
-                                <strong>آگاما</strong>فرصت پیدا کردن سغری را که دوست دارید برای شما فراهم می‌کند. این‌جا می‌توانید به دنبال سفری جذاب با هزینه مناسب باشید.
+                                <strong>آگاما</strong>فرصت پیدا کردن سفری را که دوست دارید برای شما فراهم می‌کند. این‌جا می‌توانید به دنبال سفری جذاب با هزینه مناسب باشید.
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="pi-header-social">
                                 <ul class="list-inline">
-                                    <li><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                                    <li><a href="#" title="Pinterest" target="_blank"><i class="fa fa-pinterest"></i></a></li>
-                                    <li><a rel="publisher" href="#" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a href="https://www.facebook.com/agama.ir" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.twitter.com/agamatravel" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://www.instagram.com/agama.ir" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://www.telegram.me/agamadotir" title="Telegram" target="_blank"><i class="fa fa-telegram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
