--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -110,13 +110,13 @@ $breadcrumbs = $this->breadcrumb(
                     </button>
                     <?php if ($module == 'system') { ?>
                         <h1 class="navbar-brand">
-                            <a href="<?php echo Pi::url($this->url('home')); ?>" title="<?php echo _escape($sitename); ?>">
+                            <a href="https://www.agama.ir" title="<?php echo _escape($sitename); ?>">
                                 <?php echo _escape($sitename); ?>
                             </a>
                         </h1>
                     <?php } else { ?>
                         <h2 class="navbar-brand">
-                            <a href="<?php echo Pi::url($this->url('home')); ?>" title="<?php echo _escape($sitename); ?>">
+                            <a href="https://www.agama.ir" title="<?php echo _escape($sitename); ?>">
                                 <?php echo _escape($sitename); ?>
                             </a>
                         </h2>
@@ -137,7 +137,7 @@ $breadcrumbs = $this->breadcrumb(
                 </div>
                 <div class="col-md-4">
                     <div class="pi-header-btn">
-                        <a itemprop="url" class="btn btn-primary" href="<?php echo Pi::url($this->url('home')); ?>/event/manage" title="ثبت و مدیریت سفر">
+                        <a itemprop="url" class="btn btn-primary" href="https://www.agama.ir/event/manage" title="ثبت و مدیریت سفر">
                             <span itemprop="name">ثبت و مدیریت سفر</span>
                         </a>
                     </div>
@@ -226,52 +226,52 @@ $breadcrumbs = $this->breadcrumb(
             </div>
             <div class="pi-header-body-category clearfix hidden-xs">
                 <div class="thumbnail">
-                    <a href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism" title="طبیعت گردی">
+                    <a href="https://www.agama.ir/event/ecotourism" title="طبیعت گردی">
                         <img class="img-responsive" src="<?php echo $this->assetTheme('image/ecotourism.jpg'); ?>" alt="طبیعت گردی">
                     </a>
                     <div class="caption">
                         <h3>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism" title="طبیعت گردی">طبیعت گردی</a>
+                            <a href="https://www.agama.ir/event/ecotourism" title="طبیعت گردی">طبیعت گردی</a>
                         </h3>
                     </div>
                 </div>
                 <div class="thumbnail">
-                    <a href="<?php echo Pi::url($this->url('home')); ?>/event/adventure" title="ماجراجویی">
+                    <a href="https://www.agama.ir/event/adventure" title="ماجراجویی">
                         <img class="img-responsive" src="<?php echo $this->assetTheme('image/adventure.jpg'); ?>" alt="ماجراجویی">
                     </a>
                     <div class="caption">
                         <h3>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>/event/adventure" title="ماجراجویی">ماجراجویی</a>
+                            <a href="https://www.agama.ir/event/adventure" title="ماجراجویی">ماجراجویی</a>
                         </h3>
                     </div>
                 </div>
                 <div class="thumbnail">
-                    <a href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering" title="کوهنوردی">
+                    <a href="https://www.agama.ir/event/mountaineering" title="کوهنوردی">
                         <img class="img-responsive" src="<?php echo $this->assetTheme('image/mountaineering.jpg'); ?>" alt="کوهنوردی">
                     </a>
                     <div class="caption">
                         <h3>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering" title="کوهنوردی">کوهنوردی</a>
+                            <a href="https://www.agama.ir/event/mountaineering" title="کوهنوردی">کوهنوردی</a>
                         </h3>
                     </div>
                 </div>
                 <div class="thumbnail">
-                    <a href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country" title="صحرانوردی">
+                    <a href="https://www.agama.ir/event/cross-country" title="صحرانوردی">
                         <img class="img-responsive" src="<?php echo $this->assetTheme('image/cross-country.jpg'); ?>" alt="صحرانوردی">
                     </a>
                     <div class="caption">
                         <h3>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country" title="کویرنوردی">کویرنوردی</a>
+                            <a href="https://www.agama.ir/event/cross-country" title="کویرنوردی">کویرنوردی</a>
                         </h3>
                     </div>
                 </div>
                 <div class="thumbnail">
-                    <a href="<?php echo Pi::url($this->url('home')); ?>/event/observation" title="رصد">
+                    <a href="https://www.agama.ir/event/observation" title="رصد">
                         <img class="img-responsive" src="<?php echo $this->assetTheme('image/observation.jpg'); ?>" alt="رصد">
                     </a>
                     <div class="caption">
                         <h3>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>/event/observation" title="رصد">رصد</a>
+                            <a href="https://www.agama.ir/event/observation" title="رصد">رصد</a>
                         </h3>
                     </div>
                 </div>
@@ -416,11 +416,10 @@ $breadcrumbs = $this->breadcrumb(
                         <div class="pi-footer-social text-right">
                             <h2>شبکه های اجتماعی</h2>
                             <ul class="list-inline">
-                                <li><a target="_blank" title="" href="#"><i class="fa fa-facebook-square"></i></a></li>
-                                <li><a target="_blank" title="" href="#"><i class="fa fa-twitter-square"></i></a></li>
-                                <li><a target="_blank" title="" href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li><a rel="publisher" target="_blank" title="" href="#"><i class="fa fa-google-plus-square"></i></a></li>
-                                <li><a target="_blank" title="" href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                                <li><a href="https://www.facebook.com/agama.ir" title="Facebook" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                                <li><a href="https://www.twitter.com/agamatravel" title="Twitter" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                                <li><a href="https://www.instagram.com/agama.ir" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://www.telegram.me/agamadotir" title="Telegram" target="_blank"><i class="fa fa-telegram"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -429,28 +428,28 @@ $breadcrumbs = $this->breadcrumb(
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <h3>مدت اجرای سفرها</h3>
                         <ul class="list-unstyled">
-                            <li><a title="تورهای یک روزه" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> تورهای یک روزه</a></li>
-                            <li><a title="تورهای چند روزه" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> تورهای چند روزه</a></li>
-                            <li><a title="تورهای همه روزه" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> تورهای همه روزه</a></li>
+                            <li><a title="تورهای یک روزه" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> تورهای یک روزه</a></li>
+                            <li><a title="تورهای چند روزه" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> تورهای چند روزه</a></li>
+                            <li><a title="تورهای همه روزه" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> تورهای همه روزه</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <h3>طبقه‌بندی سفرها</h3>
                         <ul class="list-unstyled">
-                            <li><a title="طبیعت گردی" href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism"><i class="fa fa-angle-left"></i> طبیعت گردی</a></li>
-                            <li><a title="ماجراجویی" href="<?php echo Pi::url($this->url('home')); ?>/event/adventure"><i class="fa fa-angle-left"></i> ماجراجویی</a></li>
-                            <li><a title="کوهنوردی" href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering"><i class="fa fa-angle-left"></i> کوهنوردی</a></li>
-                            <li><a title="کویرنوردی" href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country"><i class="fa fa-angle-left"></i> کویرنوردی</a></li>
-                            <li><a title="رصد" href="<?php echo Pi::url($this->url('home')); ?>/event/observation"><i class="fa fa-angle-left"></i> رصد</a></li>
+                            <li><a title="طبیعت گردی" href="https://www.agama.ir/event/ecotourism"><i class="fa fa-angle-left"></i> طبیعت گردی</a></li>
+                            <li><a title="ماجراجویی" href="https://www.agama.ir/event/adventure"><i class="fa fa-angle-left"></i> ماجراجویی</a></li>
+                            <li><a title="کوهنوردی" href="https://www.agama.ir/event/mountaineering"><i class="fa fa-angle-left"></i> کوهنوردی</a></li>
+                            <li><a title="کویرنوردی" href="https://www.agama.ir/event/cross-country"><i class="fa fa-angle-left"></i> کویرنوردی</a></li>
+                            <li><a title="رصد" href="https://www.agama.ir/event/observation"><i class="fa fa-angle-left"></i> رصد</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <h3>نحوه اجرای سفرها</h3>
                         <ul class="list-unstyled">
-                            <li><a title="انفرادی" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> انفرادی</a></li>
-                            <li><a title="دوستانه" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> دوستانه</a></li>
-                            <li><a title="خانوادگی" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> خانوادگی</a></li>
-                            <li><a title="کودکان" href="<?php echo Pi::url($this->url('home')); ?>/event"><i class="fa fa-angle-left"></i> کودکان</a></li>
+                            <li><a title="انفرادی" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> انفرادی</a></li>
+                            <li><a title="دوستانه" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> دوستانه</a></li>
+                            <li><a title="خانوادگی" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> خانوادگی</a></li>
+                            <li><a title="کودکان" href="https://www.agama.ir/event"><i class="fa fa-angle-left"></i> کودکان</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12">
@@ -470,7 +469,7 @@ $breadcrumbs = $this->breadcrumb(
     <div class="pi-footer-copyright clearfix">
         <div class="container">
             <div class="row">
-                <div class="text-left col-md-6" data-rel="license">تمام حقوق مطالب برای وب سایت <a href="<?php echo Pi::url($this->url('home')); ?>/" title="<?php echo _escape($sitename); ?>"><?php echo _escape($sitename); ?></a> محفوظ است.
+                <div class="text-left col-md-6" data-rel="license">تمام حقوق مطالب برای وب سایت <a href="https://www.agama.ir/" title="<?php echo _escape($sitename); ?>"><?php echo _escape($sitename); ?></a> محفوظ است.
                 </div>
                 <div class="text-right col-md-6" data-rel="license">طراحی و توسعه <a title="فراگسترش" href="http://www.faragostaresh.com" target="_blank">فراگسترش</a>
                 </div>
